Changes in clustComp 1.2.0
==========================

  o Added new arguments ‘expression’, ‘layout’ and ‘ramp’ 
to flatVShier(), to provide more flexibility to the plot 
layout.

NEW FEATURE:

  o The expanded version of the flatVShier() function allows 
adding the heatmap of the data, ordered according to the 
resulting hierarchical tree.


Changes in clustComp 1.0.0
==========================

  o Release of the package.